--- a/frontend/static/frontend/bower.json
+++ b/frontend/static/frontend/bower.json
@@ -25,6 +25,8 @@
     "angular-animate": "^1.5.0",
     "angular-resource": "^1.5.0",
     "angular-route": "^1.5.0",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "ui-select": "angular-ui-select#^0.14.2",
+    "angular-sanitize": "^1.5.0"
   }
 }
