--- a/frontend/static/frontend/bower.json
+++ b/frontend/static/frontend/bower.json
@@ -27,6 +27,7 @@
     "angular-route": "^1.5.0",
     "bootstrap": "^3.3.6",
     "ui-select": "angular-ui-select#^0.14.2",
-    "angular-sanitize": "^1.5.0"
+    "angular-sanitize": "^1.5.0",
+    "angular-file-saver": "^1.1.0"
   }
 }
