--- a/frontend/static/frontend/bower.json
+++ b/frontend/static/frontend/bower.json
@@ -30,6 +30,7 @@
     "angular-sanitize": "^1.5.0",
     "angular-file-saver": "^1.1.0",
     "textAngular": "^1.5.1",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "bootstrap-ui-datetime-picker": "^2.4.3"
   }
 }
